cleanup to pages nav on mobile and ace edit typing scrolling window fix

--- a/apps/html5os/pages/index.css
+++ b/apps/html5os/pages/index.css
@@ -22,15 +22,7 @@ footer {
     .navbar-collapse.in {
         overflow-y: visible;
     }
-}
-.navbar-collapse.in {
-    overflow-y: visible;
-}
-.navbar-collapse.collapse, .navbar-collapse.in {
-    height: 50px !important;
-}
-@media (min-width: 768px) {
-    .navbar-collapse.collapse {
+    .navbar-collapse.collapse, .navbar-collapse.in {
         height: 50px !important;
     }
 }
